# timetable-generation-system

./: Cargo.toml  README.md  config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/: app_config.rs  main.rs
src/controller/: controller.rs
src/db/: README.md
src/db/scripts/: add_professors.sh  setup.sql  setup_postgres.sh
src/db/src/: database.rs
src/domain/: grade.rs  mod.rs  student.rs  teacher.rs
src/ext/: mod.rs
src/ext/support/: tokiort.rs
src/generator/: configuration.rs  generator.rs  group_timetable.rs  mod.rs
src/repository/: grade_repository.rs  mod.rs  student_repository.rs  teacher_repository.rs
src/server/: constants.rs  macros.rs  mod.rs  server.rs
src/server/html/: dashboard.html  file_not_found.html  index.html  signup.html
src/server/page_controller/: landing_page_controller.rs  mod.rs  signup_page_controller.rs
src/server/ui/: mod.rs  view.rs
src/server/ui/page_controller/: dashboard_controller.rs  landing_page_controller.rs  mod.rs  page_controller_traits.rs  signup_page_controller.rs
