[package]
name = "tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10" }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.6.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
url = "2.5.0"
serde_json = "1.0.116"
regex = "1.10.4"
pin-project-lite = "0.2.13"
